--- a/sass/css/_unit.scss
+++ b/sass/css/_unit.scss
@@ -2,6 +2,7 @@
   --bulma-grid-gap: 6.5rem;
   --bulma-grid-column-count: 2;
   @media screen and (max-width: 768px) {
+    --bulma-grid-gap: 2.5rem;
     --bulma-grid-column-count: 1;
   }
 }
